[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/block_list/block_list_panel.gd" type="Script" id=1]
[ext_resource path="res://assets/mesh_lib_02.meshlib" type="MeshLibrary" id=2]

[sub_resource type="ButtonGroup" id=1]

[sub_resource type="ButtonGroup" id=2]

[node name="BlockListPanel" type="Panel"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -180.0
rect_min_size = Vector2( 180, 0 )
size_flags_vertical = 3
script = ExtResource( 1 )
mesh_library = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_right = 180.0
margin_bottom = 94.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 173.0
margin_bottom = 87.0

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 166.0
margin_bottom = 14.0
text = "Editor Mode"

[node name="EditorModeContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 166.0
margin_bottom = 38.0

[node name="PlayerModeButton" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer/EditorModeContainer"]
margin_right = 81.0
margin_bottom = 20.0
size_flags_horizontal = 3
toggle_mode = true
pressed = true
group = SubResource( 1 )
text = "Player"

[node name="EditorModeButton" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer/EditorModeContainer"]
margin_left = 85.0
margin_right = 166.0
margin_bottom = 20.0
size_flags_horizontal = 3
toggle_mode = true
group = SubResource( 1 )
text = "Editor"

[node name="Label2" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 166.0
margin_bottom = 56.0
text = "Block Placement Mode"

[node name="PlaceModeContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 166.0
margin_bottom = 80.0

[node name="PlaceBlocksButton" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer/PlaceModeContainer"]
margin_right = 81.0
margin_bottom = 20.0
size_flags_horizontal = 3
toggle_mode = true
pressed = true
group = SubResource( 2 )
text = "Place"

[node name="DeleteBlocksButton" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer/PlaceModeContainer"]
margin_left = 85.0
margin_right = 166.0
margin_bottom = 20.0
size_flags_horizontal = 3
toggle_mode = true
group = SubResource( 2 )
text = "Delete"

[node name="Control" type="Control" parent="VBoxContainer"]
margin_top = 94.0
margin_right = 180.0
margin_bottom = 600.0
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HFlowContainer" type="HFlowContainer" parent="VBoxContainer/Control/ScrollContainer"]
margin_right = 164.0
margin_bottom = 490.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BlockColorRect" type="ColorRect" parent="VBoxContainer/Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.658824 )

[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/EditorModeContainer/PlayerModeButton" to="." method="_on_PlayerModeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/EditorModeContainer/EditorModeButton" to="." method="_on_EditorModeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/PlaceModeContainer/PlaceBlocksButton" to="." method="_on_PlaceBlocksButton_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/PlaceModeContainer/DeleteBlocksButton" to="." method="_on_DeleteBlocksButton_pressed"]
